          report!) (closes #157)
        - change perms on the bin/ files to 755 from 644 (thanks again to
          'nigelhorne' from github for reporting) (closes #156)
        - moved BrewBuild object creation in brewbuild down below the checks to
          see if *brew is installed. No need for the object if they aren't
          (closes #160)

2.09    2016-11-06
        - added "logfile" flag for bbtester. If not in --fg mode with --stdout
          set and --logfile is set, we'll write to a file in
          "workdir/bbtester.log". This is to help in situations where the
          tester is hanging in 'start' mode, but not in --fg mode. Without this
          flag, no logging info is displayed or returned (closes #149)
        - fixed issue where setup info was not being displayed with -s
          (closes #154)
        - fixed issue where sending -1 to --new was causing brewbuild help to
          be displayed (closes #151)
        - required Perl version now 5.10 from 5.8, due to that limit in 
          MetaCPAN::Client
        - removed Perl 5.8 tests from Travis
        - added help entry for the -S|--save option
        - fixed t/test_api/95, as Mock::Sub now has more revdeps (closes #155)
        - slight wording change in Tutorial (closes #147)
        - brewbuild will now let the user know that no perls are installed
          instead of just outputting nothing (closes #150)

2.08    2016-06-23
        - changed from using HOMEPATH env var to USERPROFILE on Windows, as the
          former didn't contain the drive letter (fixes #96)
        - legacy perls were not being excluded when legacy was disabled
          (fixes #137)
        - changed all links to dnmfarrell berrybrew repo to stevieb9 (closes
          #136)
        - removed notices about MSWin PATH issues, as they were completely
          rectified in berrybrew after it's "off" feature was added
        - several POD corrections