@@ -9,6 +9,8 @@ Revision history for Test-BrewBuild
         - moved BrewBuild object creation in brewbuild down below the checks to
           see if *brew is installed. No need for the object if they aren't
           (closes #160)
+        - brewbuild was deleting $args{args} instead of $opts{args} when a
+          plugin is in use (fixes #159)
 
 2.09    2016-11-06
         - added "logfile" flag for bbtester. If not in --fg mode with --stdout
